2004-05-22  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/NewProjectDialog.cs: Sort properly.

2004-05-19  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: potential nullref
	removed.

2004-05-20  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* Services/Tasks/Task.cs: add a "COMMENT" ErrorNumber in order to
	show TaskType.Comment in Task List.

2004-05-18  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Combine/Combine.cs: load/save a new property
	'RelativeOutputPath' on the solution level. Much hilarity ensues.

2004-05-17  Todd Berman  <tberman@sevenl.net>

	* Commands/ProjectBrowserCommands/CombineNodeCommands.cs:
	* Commands/FileCommands.cs:
	* Gui/Dialogs/NewProjectDialog.cs:
	* Gui/Dialogs/OptionPanels/IDEOptions/LoadSavePanel.cs: change from
	SpecialFolder.Personal to getenv ("HOME").

2004-05-16  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/ReferenceDialog/SelectReferenceDialog.cs: fix to use
	the new SystemAssemblySerivce.
	* Gui/Dialogs/ReferenceDialog/GacReferencePanel.cs: ^^
	* Gui/Components/SdMenuCommand.cs: remove useless code, use the proper
	overload.
	* Gui/Pads/ClassScout/ClassScout.cs: revert semi-fix of r1600 and add
	a new fix that might or might not work, but will not cause the speed
	issues of the previous fix.
	* Gui/Pads/ClassScout/NodeBuilder/DefaultDotNetClassScoutNodeBuiler.cs:
	^^
	* Gui/Pads/HelpBrowser/HelpViewer.cs: indenting fix.
	* Services/SystemAssemblyService.cs: new service for identifying
	system assemblies (mono installed + pc'd assemblies)
	* Services/ParserService/DefaultParserService.cs:
	* Services/ParserService/IParserService.cs: passthrough for monodoc
	resolver.
	* Makefile.am: add SystemAssemblyService
	* Internal/Project/Project/ProjectReference.cs: proper reference
	information.
	* Internal/Project/Project/AbstractProject.cs: remove windows .ToUpper
	hack.
	* Internal/Project/Combine/Combine.cs: start of solution level
	makefiles.