@@ -1,3 +1,11 @@
+2004-05-24  Todd Berman  <tberman@sevenl.net>
+
+	* Gui/Workbench/DefaultWorkbench.cs: Setup text/uri-list DnD.
+	Tested with single and multiple files/projects from nautilus.
+	* Internal/Parser/ReflectionLayer/ReflectionClass.cs: workaround
+	potential nullref.
+	* Commands/AutostartCommands.cs: fix focus issue.
+
 2004-05-22  Todd Berman  <tberman@sevenl.net>
 
 	* Gui/Dialogs/NewProjectDialog.cs: Sort properly.
